# SimpleCNNClassifier

./: .gitignore  Cat_vs_Dog_with_PyTorch.ipynb  README.md  cats-dogs-classification-with-pytorch-v2.ipynb  config.py  eval.py  main.py  prepare_dataset.py  pyproject.toml  train.py
